test(UserControllerTest) : add test for passowrd missing upper case