@@ -6,8 +6,8 @@ import jakarta.validation.ConstraintValidatorContext;
 public class PasswordValidator implements ConstraintValidator<PasswordConstraint, String> {
     @Override
     public boolean isValid (String password , ConstraintValidatorContext context) {
-        if ( password == null || password.trim().isEmpty() ) return true;
-        return password.chars().anyMatch(Character::isAlphabetic);
+        if ( password == null || password.isBlank() ) return true;
+        return password.chars().anyMatch(Character::isUpperCase);
     }
     @Override
     public void initialize(PasswordConstraint constraintAnnotation) {
